# template-service-rust

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_COMPLETE.txt  KAFKA_IMPLEMENTATION.md  KUBERNETES.md  LICENSE  LOGGING.md  LOGGING_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  demo-logging.sh  docker-compose.yml  rustfmt.toml  test-helm.sh
.github/: CODEOWNERD  WORKFLOWS.md  labeler.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  dependency-review.yml  labeler.yml  release.yml  stale.yml
.zirv/: .shortcuts.yaml  commit.yaml  make-migration.yaml  start.yaml
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/config/: app.rs  database.rs  mod.rs
backend/src/kafka/: USAGE.md  config.rs  consumer.rs  handler.rs  manager.rs  mod.rs  producer.rs
backend/src/kafka/examples/: handlers.rs  mod.rs
backend/src/utils/: logging.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  logging.rs
common/src/config/: logging.rs  mod.rs
common/src/utils/: mod.rs
helm/template-service/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values.yaml
helm/template-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
kafka-messages/: Cargo.toml
kafka-messages/src/: lib.rs  messages.rs
services/api/: Cargo.toml  Dockerfile
services/api/src/: main.rs  router.rs
services/api/src/config/: app.rs  database.rs  mod.rs
services/api/src/controllers/: base.rs  mod.rs
services/api/src/seeder/: mod.rs
services/api/src/seeder/data/default/: example.json
services/kafka/: Cargo.toml  Dockerfile
services/kafka/src/: main.rs
