[package]
name = "common"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# For environment variable loading
dotenvy = "0.15.7"
envy = "0.4.2"

# Serialization
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

# For logging - using tracing for structured logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"

# zirv crates
zirv-config = "0.2.1"

[dev-dependencies]
serial_test = "2.0"
