[package]
name = "kafka-messages"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

# For async trait
async-trait = "0.1"

# For logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
