[package]
name = "kafka"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# For environment variable loading
dotenvy = "0.15.7"

# Serialization
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# For logging - using tracing for structured logs
tracing = "0.1"

# zirv crates
zirv-config = "0.2.1"
# Note: zirv-kafka requires system librdkafka to be installed
# Uncomment when ready to use:
# zirv-kafka = "0.2.1"

# Common shared library
common = { path = "../../common" }

# Kafka messages library
kafka-messages = { path = "../../kafka-messages" }
